--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 body
 {
-    color: #33A;
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -10,20 +11,27 @@ body
 
 #cabecera
 {
-    background: #33A;
-    box-shadow: 0px 2px 50px 0px rgb(0, 0, 0, 0.75);
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
 
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline
 {
-    margin: 0 0 0 1em;
+    padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
 }
+
 #container
 {
     width: 70%;
@@ -39,13 +47,6 @@ body
 }
 #post
 {
-    padding: 1em;
-}
-#container h1
-{
-    font-size: 20px;
-}
-#post
-{
+    background: white;
     padding: 1em;
 }
