--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: #33A;
+    color: black;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -48,4 +48,11 @@ body
 #post
 {
     padding: 1em;
+}
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
